deploy/packed/nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tundera-nextjs-web-nodeport
  labels:
    tundera.stackshuffle.io/app: tundera-nextjs-web
spec:
  type: NodePort
  selector:
    app: tundera-nextjs-web
    tier: web
  ports:
  - protocol: TCP
    port: 30001
    targetPort: 3000
