deploy/packed/nextjs/tundera-nextjs-web-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tundera-nextjs-web-nodeport-service
  labels:
    meanpug.com/app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
spec:
  type: NodePort
  selector:
    app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
