deploy/packed/nextjs/tundera-nginx-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tundera-nextjs-web-ingress
  labels:
    meanpug.com/app: tundera-nextjs-web # {"$ref":"#/definitions/io.k8s.cli.setters.image:setter"}
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: lunar.tundera.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: tundera-nextjs-web-service
              servicePort: 80
